// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Form renders add if no note prop 1`] = `
<NoteForm
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value=""
    >
      <p>
        <label>
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value=""
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="message"
      onChange={[Function]}
      value=""
    >
      <p>
        <label>
          <input
            name="message"
            onChange={[Function]}
            required={true}
            value=""
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note Form renders add if no note prop 2`] = `
<NoteForm
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "message": "finish your lab",
            "title": "note1",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value="note1"
    >
      <p>
        <label>
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value="note1"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="message"
      onChange={[Function]}
      value="finish your lab"
    >
      <p>
        <label>
          <input
            name="message"
            onChange={[Function]}
            required={true}
            value="finish your lab"
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note Form renders edit if there is a note prop 1`] = `
<NoteForm
  note={
    Object {
      "message": "hey there",
      "title": "note1",
    }
  }
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value="note1"
    >
      <p>
        <label>
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value="note1"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="message"
      onChange={[Function]}
      value="hey there"
    >
      <p>
        <label>
          <input
            name="message"
            onChange={[Function]}
            required={true}
            value="hey there"
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;

exports[`Note Form renders edit if there is a note prop 2`] = `
<NoteForm
  note={
    Object {
      "message": "hey there",
      "title": "note1",
    }
  }
  onComplete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "message": "finish your lab",
            "title": "note1",
          },
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": Promise {},
        },
      ],
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="title"
      onChange={[Function]}
      value="note1"
    >
      <p>
        <label>
          <input
            name="title"
            onChange={[Function]}
            required={true}
            value="note1"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="message"
      onChange={[Function]}
      value="finish your lab"
    >
      <p>
        <label>
          <input
            name="message"
            onChange={[Function]}
            required={true}
            value="finish your lab"
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</NoteForm>
`;
